# price-predictor

./: README.md  pyproject.toml
price_predictor/: model.ipynb
price_predictor/utils/: _validation.py  config.json
